--- a/views/pages/to_do_list_items.ejs
+++ b/views/pages/to_do_list_items.ejs
@@ -11,7 +11,7 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="logo">
-        <h1>Geri</h1>
+        <img src="/assets/Geri.png" alt="Geri Logo" />
       </div>      <nav class="nav-menu">
         <a href="/dashboard" class="nav-item">Painel</a>
         <a href="/earnings" class="nav-item">Ganhos</a>
