--- a/views/pages/earnings.ejs
+++ b/views/pages/earnings.ejs
@@ -83,7 +83,9 @@
 
       <!-- Footer -->
       <footer class="footer">
-        <p>Feito por Anne Esther e MIT License 2025</p>
+        <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">
+          Feito por Anne Esther © MIT License 2025
+        </a>
       </footer>
     </main>
   </div>  <script>
