--- a/views/pages/goals.ejs
+++ b/views/pages/goals.ejs
@@ -108,6 +108,12 @@
     </main>
   </div>
 
+  <footer class="footer">
+      <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">
+        Feito por Anne Esther © MIT License 2025
+      </a>
+    </footer>
+
   <script>
     function carregarMetas() {
       fetch('/api/goals/me')
