--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -25,6 +25,11 @@
       <button type="submit">Salvar Alterações</button>
     </form>
   </main>
+  <footer class="footer">
+    <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">
+      Feito por Anne Esther © MIT License 2025
+    </a>
+  </footer>
   <%- include('../partials/footer') %>
 </body>
 </html>
