--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -111,11 +111,13 @@
         <%= error ? error : '' %>
       </div>
       
+    </main>
+  </div>
+  <footer class="footer">
       <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">
         Feito por Anne Esther © MIT License 2025
       </a>
-    </main>
-  </div>
+    </footer>
 </body>
 
 </html>
