--- a/views/pages/to_do_list_items.ejs
+++ b/views/pages/to_do_list_items.ejs
@@ -196,5 +196,10 @@
       }
     });
   </script>
+  <footer class="footer">
+      <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">
+        Feito por Anne Esther © MIT License 2025
+      </a>
+    </footer>
 </body>
 </html>
