--- a/views/pages/tutorial.ejs
+++ b/views/pages/tutorial.ejs
@@ -52,10 +52,12 @@
         <div class="button">
             <a href="/dashboard"><button>Continuar</button></a>
         </div>
-        <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">Feito por
-            Anne Esther © MIT
-            License 2025</a>
     </main>
+    <footer class="footer">
+        <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">
+            Feito por Anne Esther © MIT License 2025
+        </a>
+    </footer>
 </body>
 
 </html>
