--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -29,11 +28,13 @@
 
       <a href="/tutorial"><button>Continuar</button></a>
 
-      <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">Feito por
-        Anne Esther © MIT
-        License 2025</a>
+      <footer class="footer">
+        <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">
+          Feito por Anne Esther © MIT License 2025
+        </a>
+      </footer>
+    </main>
   </div>
-  </main>
 </body>
 
 </html>
