DOCS: readme finalizado com vídeo demonstração

--- a/views/pages/tutorial.ejs
+++ b/views/pages/tutorial.ejs
@@ -18,7 +18,7 @@
         </div>
 
         <div class="video">
-            <iframe width="679.774" height="366.216" src="https://www.youtube.com/embed/your-video-id"
+            <iframe width="679.774" height="366.216" src="https://www.youtube.com/embed/VGgSOIX9ihA"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
